fixed alignment for staff

--- a/NewEntradoxWebsite/CSS/pages.css
+++ b/NewEntradoxWebsite/CSS/pages.css
@@ -20,5 +20,7 @@
 }
 #page5 {
     top: 400%;
+    object-fit: contain;
+
 }
 
