--- a/NewEntradoxWebsite/CSS/staff.css
+++ b/NewEntradoxWebsite/CSS/staff.css
@@ -44,31 +44,40 @@ body {
 .displayNames {
     position: relative;
     margin-top: 4%;
-    object-fit: cover;
     font-family: 'TW', Arial, Helvetica, sans-serif;
     letter-spacing: .3rem;
     font-weight: normal;
     color: white;
-    font-size: 2.5rem;
+    font-size: 40px;
     margin-left: 10%;
 }
 
 .StaffDisplayListIcons {
     position: absolute;
     display: flex;
+    opacity: 0;
     flex-wrap: wrap;
     height: 100%;
     object-fit: cover;
     flex-direction: column;
 }
 
+
 .displayNameIcon {
     position: relative;
-    margin-top: 75%;
+    margin-top: 0; /* Adjusted to 0 to align with the text */
     width: auto;
-    top: .3%;
+    object-fit: cover;
+    height: 40px;
+    white-space: nowrap;
+}
+.displayNameIconTest {
+    position: relative;
+    width: auto;
+    vertical-align: middle;
     object-fit: cover;
     height: 2.5rem;
+    margin-right: 5px; /* Added margin to separate icon from text */
 }
 
 #CurrentStaffList-Engineer {
